--- a/gulp-builder-dz1/source/template/pages/index.pug
+++ b/gulp-builder-dz1/source/template/pages/index.pug
@@ -1,7 +1,11 @@
 extends ../_template
 
 block variables
-  - var title = 'Home page'
+  - var title = 'BlackRose'
 
 block content
-  include ../common/_greating
+	
+  include ../common/_welcome
+
+
+
