--- a/gulp-builder-dz1/source/template/blocks/_welcome-avatar.pug
+++ b/gulp-builder-dz1/source/template/blocks/_welcome-avatar.pug
@@ -1,8 +1,10 @@
 .my-avatar__img
-	img(src='assets/img/my_photo.png')
+     img(src='assets/img/avatar.png',alt="Shapira Cristina")
 .my-avatar__name
-	h2 Шапира Кристина
-	p Личный сайт веб разработчика
+    h2.name Шапира Кристина
+    span.title Личный сайт веб-разработчика
+
+
 
 
 
