--- a/gulp-builder-dz1/source/template/pages/works.pug
+++ b/gulp-builder-dz1/source/template/pages/works.pug
@@ -4,3 +4,17 @@ block variables
   - var title = 'My works'
 
 block content
+    .wrapper
+        .page-header__works
+            include ../common/_header
+            include ../blocks/_welcome-avatar
+        .arrow-next
+            svg
+              use(xlink:href="assets/img/sprite.svg#arrow_down")
+        a.arr-down__link(href="#")
+            include ../common/_section
+   
+
+        
+    
+        
