--- a/gulp-builder-dz1/source/template/common/_welcome.pug
+++ b/gulp-builder-dz1/source/template/common/_welcome.pug
@@ -1,9 +1,13 @@
 .wrapper.welcome
 	.container.welcome-header
-		.btn__btn-link(type="button") Авторизоваться
+		.btn__btn-link(type="button")(a href="/#autorisation") Авторизоваться
 
 	.welcome-block
 		include ../blocks/_welcome-avatar
+		include ../blocks/_social-icons
+        include ../blocks/_social-list
+        
+        
 		
 		 
 
