--- a/gulp-builder-dz1/source/template/common/_section.pug
+++ b/gulp-builder-dz1/source/template/common/_section.pug
@@ -1,4 +1,3 @@
- section.works-first
-        h1.works-first__title Мои работы
+ section.works-first//h1.works-first__title Мои работы
         
 section
