некоторые добавлены и не юзают

--- a/gulp-builder-dz1/source/style/app.scss
+++ b/gulp-builder-dz1/source/style/app.scss
@@ -5,6 +5,12 @@ body {
 @import 'common/greating';
 @import 'common/welcome';
 @import 'common/welcome-block';
+@import 'common/header';
+@import 'common/blog';
+@import 'common/works';
+
 
 @import 'base/fonts';
 @import 'base/mixins';
+
+
