--- a/gulp-builder-dz1/source/template/blocks/_social-list.pug
+++ b/gulp-builder-dz1/source/template/blocks/_social-list.pug
@@ -1,9 +1,13 @@
 .social-list
-    ul.social-list__item
-        li.social-list__item--works
+    ul
+        social-list__item
+        li
+            social-list__item--works
             a(href="works.html").social-list__link Мои работы
-        li.social-list__item--about
+        li
+            social-list__item--about
             a(href="about.html").social-list__link Обо мне
-        li.social-list__item--blog
+        li
+            social-list__item--blog
             a(href="blog.html").social-list__link Блог
         
