--- a/gulp-builder-dz1/source/style/common/_welcome.scss
+++ b/gulp-builder-dz1/source/style/common/_welcome.scss
@@ -15,10 +15,8 @@
 	margin: auto;
 	margin-top: 140px;
 	min-width: 380px;
-	background: #1c2c49;
-    
+	background-color: rgba(28, 44, 73, 0.5);
 
-	
 	.my-avatar__img{
 		margin: auto;
 		margin-top: 42px;
